--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,5 @@ steps:
   inputs:
     buildType: 'current'
     downloadType: 'single'
+    artifactName: 'drop'
     downloadPath: '$(System.ArtifactsDirectory)'
